set up jre using jlink